--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,9 +19,12 @@ jobs:
       with:
         node-version: '18'
         
-    - name: Install dependencies
-      run: npm ci
-      
+    - name: Clear cache and install dependencies
+      run: |
+        rm -rf node_modules
+        rm -rf .next
+        npm ci
+        
     - name: Build project
       run: npm run build
       
