--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "export": "next build"
+    "export": "next build",
+    "postbuild": "node copy-images.js"
   },
   "dependencies": {
     "@radix-ui/react-avatar": "^1.1.6",
